# lt25-grpo-debate-stolen

./: .gitignore  INFERENCE_ENGINE.md  LETSDEBUNKTHEJUDGE.ipynb  README.md  evaluator.py  llms.py  main.py  memory_utils.py  model_interface.py  plotter.py  pyproject.toml  rldatasets.py  run.sh  separate_judge_eval.py  test_contrastive.sh  test_contrastive_code.sh  test_contrastive_code_habrok.sh  test_semi_batch.sh  test_semi_batch_contrastive.sh  test_semi_batch_contrastive_habrok.sh  test_vllm_integration.py  utils.py
demo/: INFERENCE_ENGINE.md  README.md  app.py  config.py  debate_engine.py  leaderboard.py  leaderboard_data.json  pyproject.toml  requirements.txt  setup.sh  simple_models.py  test_basic.py  test_demo.py  test_final.py  vllm_gradio_server.py
demo/data/: README.md  dashboard.py  evaluate_pairs.py  inference_client.py  inference_server.py  judge_prompt.txt  leaderboard_dashboard.py  questions.csv  responses_0.csv  run_server.sh  run_vllm_server.sh  submission_dashboard.py
