[project]
name = "opensource-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "anthropic>=0.57.1",
    "datasets>=4.0.0",
    "flash-attn==2.8.0.post2",
    "flashinfer-python>=0.2.7.post1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.90.0",
    "torch>=2.7.0",
    "transformers>=4.53.2",
    "vllm>=0.9.2",
    "wandb>=0.21.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
